fix skill matrix skills: font contrast

--- a/src/styles.css
+++ b/src/styles.css
@@ -623,7 +623,7 @@ ul.grid-container.skills {
 
 .brand-blue-light {
   background-color: var(--brand-blue-tailwind-react);
-  color: #fff;
+  color: #000;
 }
 
 .brand-blue-liquid {
